# slang-rs

./: .gitignore  Cargo.toml
.github/workflows/: build-prebuilt-libs.yml  test.yml
examples/: bindless.rs  bindless.slang  bindless.spv  common.slang  common.slang-module  entry_point_specialization.rs  entry_point_specialization.slang  prelude.slang  simple.rs  test.slang  test.slang-module  test2.slang
examples/prelude/: mesh.slang
examples/utils/: common.slang  yippe.slang
src/: error.rs  helper.rs  lib.rs  preprocess.rs  reflect.rs  types.rs
src/preprocess/: comment_strip_iter.rs
src/types/: com.rs
sys/: Cargo.toml  build.rs
sys/slang-builder/: Dockerfile  build-macos.sh  build.cmd  build.sh
sys/slang/lib/x86_64-pc-windows-msvc/: cmark-gfm.lib  compiler-core.lib  core.lib  lz4.lib  miniz.lib
sys/src/: lib.rs
