[package]
name = "slang"
version = "0.2.9"
edition = "2024"

[features]
preprocess = []

[dependencies]
slang_sys = { path = "sys" }
tracing = { version = "0.1.41" }
thiserror = { version = "2.0.17" }

once_cell = { version = "1.21.3" }
aho-corasick = { version = "1.1.4" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[[example]]
name = "simple"
required-features = []
