[package]
name = "slang"
version = "0.2.10"
edition = "2024"

[features]
preprocess = []

[dependencies]
slang_sys = { path = "sys" }
tracing = { version = "0.1.43" }
thiserror = { version = "2.0.17" }

once_cell = { version = "1.21.3" }
aho-corasick = { version = "1.1.4" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rspirv-reflect = { git = "https://github.com/Squalive/rspirv-reflect.git", default-features = false }

[[example]]
name = "simple"
required-features = []

[[example]]
name = "entry_point_specialization"
required-features = []


[[example]]
name = "bindless"
required-features = []
