[package]
name = "slang"
version = "0.2.11"
edition = "2024"

[features]
preprocess = ["dep:once_cell", "dep:aho-corasick"]

trace = ["dep:tracing"]

[dependencies]
slang_sys = { path = "sys" }

tracing = { version = "0.1.44", optional = true }
thiserror = { version = "2.0.18" }
once_cell = { version = "1.21.4", optional = true }
aho-corasick = { version = "1.1.4", optional = true }

[workspace]
members = [
	"sys"
]

[dev-dependencies]
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rspirv-reflect = { git = "https://github.com/Squalive/rspirv-reflect.git", default-features = false }

[[example]]
name = "simple"
required-features = []

[[example]]
name = "entry_point_specialization"
required-features = []


[[example]]
name = "bindless"
required-features = []
